Code added to jenkins file

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,31 @@
-pipeline
-{
-  
+pipeline{
+    agent any{
+        stages{
+            stage('One'){
+                steps{
+                    echo "This is the first step of jenkins pipeline"
+                }
+            }
+            stage('Two'){
+                steps{
+                    echo "This is SECOND Step of jenkins pipeline"
+                }
+            }
+            stage('Three'){
+                steps{
+                    echo "This is THIRD Step of jenkins pipeline"
+                }
+            }
+            stage('Four'){
+                steps{
+                    echo "This is FOURTH Step of jenkins pipeline"
+                }
+            }
+            stage('Five'){
+                steps{
+                    echo "This is FIFTH Step of jenkins pipeline"
+                }
+            }
+        }
+    }
 }
